# third-party-disclosure-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_sources/: README.md  app_store.csv  data_brokers.csv  play_store.csv  websites.csv
firefox-extension/extension/: manifest.json  popup.css  popup.html  popup.js
firefox-extension/server/: analyze.py  server.py
labels/: relevance_labels.csv  typology_labels.csv
polisis/polisis/: __init__.py  attributes.py
tests/: conftest.py  test_annotate.py  test_annotators.py  test_extract.py  test_lexicons.py  test_named_entities.py  test_pdf.py  test_platform_label.py  test_structured_relations.py  test_typology_clf.py
tpd/: __init__.py  cli.py  extract.py  gazetteer.py  lexicons.py  typology.py
tpd/annotate/: __init__.py  server.py  store.py
tpd/annotate/static/: index.html
tpd/classify/: document_class.py  named_entities.py  platform.py  poligraph_connector.py  polisis_connector.py  run.py  specificity.py  structural.py  structured_relations.py  typology_clf.py
tpd/collect/: appstore.py  base.py  disclosure.py  pdf.py  playstore.py  registry.py  runner.py  web.py
tpd/evaluate/: __init__.py  labeling.py  metrics.py
tpd/poligraph/: __init__.py  cli.py  document.py  graph.py  nlp.py  normalize.py  ontology.py  phrase_graph.py  poligrapher.py  purpose.py
tpd/poligraph/annotators/: __init__.py  base.py  collection.py  coreference.py  listann.py  purpose.py  subsumption.py
tpd/poligraph/applications/: __init__.py  contradiction.py  (+2 more)
tpd/polisis/: __init__.py  attributes.py  inference.py
(+6 files in other folders)
